# www-homepage

./: .gitignore  .jekyll-metadata  2019-in-numbers.html  2020-predictions.html  CLAUDE.md  CNAME  Gemfile  README.md  SECURITY.md  _config.yml  about.html  advisors-and-partners.html  advisors.html  blockchain.html  bootcamp.html  calendar.html  changelog.md  confirmation.html  contact.html  cyberexplorers.html  cyberexplorers.md  cyberexplorersethicalhacking.html  donate.html  escaperoom.html  games4security.html  gulpfile.js  hackathons.html  index.html  index.md  jobboard.html  main.css  oscpstudygroup.html  package-lock.json  package.json  partners.html  partners.md  securityplus.html  securitytools4nonprofits.html  stories.html  summerprogram.html  (+1 more)
_data/: 2019-in-numbers.html  2023-cyberaggies-projects.yml  _files.yml  _get-data.rb  advisors.yml  class_data.py  credentials.yml  cyber-defenders-python-academy-projects.yml  cyber-defenders-python-academy.yml  cyber-explorers-curriculum-program.csv  cyber-explorers-curriculum-program.yml  cyber-explorers-ethicalhacking-csv.csv  cyber-explorers-ethicalhacking.yml  cyber-explorers-ncat.yml  cyber-explorers-rocksf.yml  cyberexplorers-projects.yml  cybersecurity-books.yml  games4security-workshop-followup.csv  games4security.csv  games4security.yml  gs-python-schedule.yml  hackathon-projects.yml  jobs.yml  merrit-cis52-schedule.yml  merritt-cis52-schedule.yml  partners.yml  (+12 more)
_data/yaml-datagen/: README.md  pyproject.toml  yaml_datagen.py
data-runners/yaml-datagen/: pyproject.toml  requirements.txt  yaml_datagen.py
(+110 files in other folders)
