[tool.poetry]
name = "yaml-datagen"
version = "0.1.1"
description = "generate data from gsheet or csv and output them as yml"
authors = ["Vaibhav Bhandari <vaibhavb@gmail.com>"]
license = "BSD 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gspread = "^5.9.0"
pyyaml = "^6.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
