[project]
name = "yaml-datagen"
version = "0.1.2"
description = "generate data from gsheet or csv and output them as yml"
authors = [{name = "Vaibhav Bhandari", email = "vaibhavb@gmail.com"}]
license = {text = "BSD-2-Clause"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gspread>=6.0.0",
    "pyyaml>=6.0",
    "oauth2client>=4.1.3",
    "urllib3>=2.3.0",
    "requests>=2.32.0",
    "pyasn1>=0.6.1",
    "idna>=3.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
